<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NumberGuessActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_game_welcome"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:text="@string/app_game_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="210dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_game_input_number"
                android:inputType="number"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/game_hint"
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:text="@string/app_game_hint_upper"
            android:textAlignment="center"
            android:visibility="invisible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/restart"
                android:layout_width="161dp"
                android:layout_height="55dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="118dp"
                android:layout_marginBottom="2dp"
                android:text="@string/app_game_button_play_again"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>